--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "2.3.0",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
+    "expo-document-picker": "~10.1.3",
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
+    "install": "^0.13.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -42,7 +44,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-toast-message": "^2.1.5",
     "react-native-toast-notifications": "^3.2.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
