--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "install": "^0.13.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.33.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
@@ -45,6 +46,7 @@
     "react-native-toast-message": "^2.1.5",
     "react-native-toast-notifications": "^3.2.3",
     "react-native-web": "0.17.1",
+    "react-native-webview": "^11.22.7",
     "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
