--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@unimodules/core": "^7.1.2",
+    "@unimodules/react-native-adapter": "^6.3.9",
     "expo": "~44.0.0",
     "expo-document-picker": "~10.1.3",
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "install": "^0.13.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
